--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "control-stock",
+  "name": "SoftGears-Automation",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
